@@ -1,89 +1,64 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
-    <modelVersion>4.0.0</modelVersion>
-    <dependencies>
-        <dependency>
-            <groupId>org.jenkins-ci.main</groupId>
-            <artifactId>jenkins-core</artifactId>
-            </dependency>
-    </dependencies>
-
-
-    <parent>
-        <groupId>org.jenkins-ci.plugins</groupId>
-        <artifactId>plugin</artifactId>
-        <version>1.542</version>
-    </parent>
-
-    <artifactId>soob</artifactId>
-    <packaging>hpi</packaging>
-    <version>0.1-SNAPSHOT</version>
-    <name>Jenkins Soob Plugin</name>
-
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
-
-    <developers>
-        <developer>
-            <id>nofrail</id>
-            <name>Florian Schrag</name>
-            <email>florian@schr.ag</email>
-        </developer>
-    </developers>
+	<modelVersion>4.0.0</modelVersion>
+	<dependencies>
+		<dependency>
+			<groupId>org.jenkins-ci.main</groupId>
+			<artifactId>jenkins-core</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.jenkins-ci.plugins</groupId>
+			<artifactId>mailer</artifactId>
+		</dependency>
+        <dependency><groupId>com.google.code.gson</groupId><artifactId>gson</artifactId><version>1.4</version></dependency>
+	</dependencies>
 
 
-    <scm>
-        <connection>scm:git:https://nofrail@bitbucket.org/soob/soob-plugin.git</connection>
-        <developerConnection>scm:git:git@bitbucket.org:soob/soob-plugin.git</developerConnection>
-    </scm>
+	<parent>
+		<groupId>org.jenkins-ci.plugins</groupId>
+		<artifactId>plugin</artifactId>
+		<version>1.546</version>
+	</parent>
+
+	<artifactId>soob-plugin</artifactId>
+	<packaging>hpi</packaging>
+	<version>0.1-SNAPSHOT</version>
+	<name>Jenkins Soob Plugin</name>
+
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
+
+	<developers>
+		<developer>
+			<id>gitu</id>
+			<name>Florian Schrag</name>
+			<email>florian@schr.ag</email>
+		</developer>
+	</developers>
 
 
+	<scm>
+		<connection>scm:git:https://github.com/gitu/soob-plugin.git</connection>
+		<developerConnection>scm:git:git@github.org:gitu/soob-plugin.git</developerConnection>
+	</scm>
 
-    <repositories>
-        <repository>
-            <id>repo.jenkins-ci.org</id>
-            <url>http://repo.jenkins-ci.org/public/</url>
-        </repository>
-    </repositories>
-
-    <pluginRepositories>
-        <pluginRepository>
-            <id>repo.jenkins-ci.org</id>
-            <url>http://repo.jenkins-ci.org/public/</url>
-        </pluginRepository>
-    </pluginRepositories>
-
-
-
-    <build>
-    <plugins>
-    <plugin>
-        <groupId>org.jenkins-ci.tools</groupId>
-        <artifactId>maven-hpi-plugin</artifactId>
-        </plugin>
-    <plugin>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <configuration>
-            <argLine>-XX:MaxPermSize=512m</argLine>
-        </configuration>
-    </plugin>
-    </plugins>
-    </build>
-
-
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>org.jenkins-ci.main</groupId>
-                <artifactId>jenkins-core</artifactId>
-                <version>1.542</version>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.jenkins-ci.plugins</groupId>
+				<artifactId>mailer</artifactId>
+				<version>1.6</version>
+			</dependency>
+			<dependency>
+				<groupId>org.jenkins-ci.main</groupId>
+				<artifactId>jenkins-core</artifactId>
+				<version>1.546</version>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 
 
 </project>
